JumpScript/tests/baselines/reference/errorTypesAsTypeArguments.errors.txt
tests/cases/compiler/errorTypesAsTypeArguments.jump(2,16): error TS2304: Cannot find name 'B'.
tests/cases/compiler/errorTypesAsTypeArguments.jump(2,25): error TS2304: Cannot find name 'C'.


==== tests/cases/compiler/errorTypesAsTypeArguments.jump (2 errors) ====
    interface Foo<A> {
      bar(baz: Foo<B>): Foo<C>;
                   ~
!!! error TS2304: Cannot find name 'B'.
                            ~
!!! error TS2304: Cannot find name 'C'.
    }